# Tashrifat-copy

./: .gitignore  .prettierrc  CONTRIBUTING.md  README.md  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  setting.json  tailwind.config.js
Tashrifat_Saadat/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
contact_module/: forms.py  models.py  urls.py  views.py
contact_module/migrations/: 0001_initial.py
contact_module/templates/contact_module/: contact_page.html
docs/: ARCHITECTURE.md  openapi.yaml
home_module/: urls.py  views.py
home_module/templates/home_module/: about.html  index.html
services_module/: admin.py  apps.py  models.py  urls.py  views.py
services_module/migrations/: 0001_initial.py  0002_menu_menuitem.py  0003_gallery_category.py  0004_alter_gallery_service.py
services_module/templates/services_module/: service_detail_page.html  service_page.html
site_module/: models.py
site_module/migrations/: 0001_initial.py  0002_sitesetting_site_favicon.py
static/css/: colors.css  output.css  service-detail.css
static/css/src/: input.css
static/js/: carts.js  comments.js  gallery.js
templates/: base.html  site_footer_component.html  site_header_component.html
templates/ref/: js_ref.html
